--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,19 @@
             <img src="/assets/troublert.png" width="100px" class="logo">
         </span>
         <span> Your friedly neighbourhood Crime Finders</span>
+
+        <span class="fill-space"></span>
+        <span class="right-menu">
+            <span class="menu-item">
+                <mat-icon>graphic_eq</mat-icon>
+            </span>
+            <span class="menu-item">
+                <mat-icon>people</mat-icon>
+            </span>
+            <span class="menu-item">
+                <mat-icon>info</mat-icon>
+            </span>
+        </span>
     </mat-toolbar-row>
 </mat-toolbar>
 
