--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,10 @@ html, body {
     margin: 0;
     padding: 0;
   }
+
+  .test{
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    z-index: 999;
+  }
