--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="mat-elevation-z4">
     <mat-toolbar-row>
         <span>
             <img src="/assets/troublert.png" width="100px" class="logo">
@@ -15,3 +15,5 @@
         <span class="footer-center">Troublert ©2018</span>
     </mat-toolbar-row>
 </mat-toolbar>
+
+<button mat-fab class="test"><i class="material-icons">cached</i></button>
