--- a/src/app/pages/map/map.component.css
+++ b/src/app/pages/map/map.component.css
@@ -2,3 +2,17 @@
     height: 100%;
     padding: 0;
   }
+
+  .calendar {
+    position: fixed !important;
+    bottom: 125px;
+    right: 50px;
+    z-index: 999;
+  }
+
+  .calendar-block {
+    position: fixed !important;
+    bottom: 135px;
+    right: 125px;
+    z-index: 999;
+  }
